User update fixed